[gd_scene load_steps=3 format=3 uid="uid://dwap2o4m8jvom"]

[ext_resource type="Script" uid="uid://bjlwhrstxxwlh" path="res://game_over_menu.gd" id="1_14ib6"]
[ext_resource type="FontFile" uid="uid://6j8lr80meq8j" path="res://assets/font/CutePixel.ttf" id="2_prwox"]

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_14ib6")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -71.5
offset_right = 118.5
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.762404, 0.762404, 0.762404, 1)
theme_override_fonts/font = ExtResource("2_prwox")
text = "Score: 0"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Restart"

[node name="ExitMenuButton" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Exit to Menu"
